--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = { version = "4.5.1", features = ["derive"] }
+clap = { version = "4.5.2", features = ["derive"] }
 cxx = { version = "1.0.119", features = ["c++20"] }
+serde = { version = "1.0.197", features = ["derive"] }
+serde_json = "1.0.114"
 sha2 = "0.10.8"
 
 [build-dependencies]
