feat: move lib to its own crate, create gui
    This commit creates the initial scafolding for a tauri app.
    This will make it possible to create a gui, using web technologies,
    which is essential due to the way the auth api from autenticacao.gov
    works.

    The cli is now its own crate, in the cli folder.

    The shared parts are now in the sig_lib folder under the name
    disa_lib.

--- a/sig_lib/Cargo.toml
+++ b/sig_lib/Cargo.toml
@@ -1,16 +1,13 @@
 [package]
-name = "disa_cli"
-version = "1.0.0-alpha.1"
+name = "disa_lib"
+version = "1.0.0-alpha.2"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = { version = "4.5.2", features = ["derive"] }
 cxx = { version = "1.0.119", features = ["c++20"] }
-dotenv = "0.15.0"
-dotenv_codegen = "0.15.0"
-reqwest = { version = "0.12.3", features = ["json"] }
+reqwest = { version = "0.12.3", features = ["json", "multipart", "blocking"] }
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
 sha2 = "0.10.8"
