--- a/package.json
+++ b/package.json
@@ -1,32 +1,47 @@
 {
-  "name": "sig",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview",
-    "tauri": "tauri"
-  },
-  "dependencies": {
-    "@radix-icons/vue": "^1.0.0",
-    "@tauri-apps/api": "^1",
-    "@vueuse/core": "^10.9.0",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "radix-vue": "^1.7.2",
-    "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7",
-    "vue": "^3.3.4"
-  },
-  "devDependencies": {
-    "@iconify-json/radix-icons": "^1.1.14",
-    "@iconify/vue": "^4.1.2",
-    "@tauri-apps/cli": "^1",
-    "@vitejs/plugin-vue": "^5.0.4",
-    "typescript": "^5.0.2",
-    "vite": "^5.0.0",
-    "vue-tsc": "^1.8.5"
-  }
+    "name": "pi-signing-cli",
+    "version": "0.0.1",
+    "private": true,
+    "scripts": {
+        "tauri": "tauri",
+        "dev": "vite dev",
+        "build": "vite build",
+        "preview": "vite preview",
+        "check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
+        "check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch",
+        "test": "vitest",
+        "lint": "prettier --check . && eslint .",
+        "format": "prettier --write ."
+    },
+    "devDependencies": {
+        "@sveltejs/adapter-auto": "^3.0.0",
+        "@sveltejs/adapter-static": "^3.0.1",
+        "@sveltejs/kit": "^2.0.0",
+        "@sveltejs/vite-plugin-svelte": "^3.0.0",
+        "@tauri-apps/cli": "^1.5.12",
+        "@types/eslint": "^8.56.0",
+        "autoprefixer": "^10.4.16",
+        "eslint": "^8.56.0",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-svelte": "^2.36.0-next.4",
+        "postcss": "^8.4.32",
+        "postcss-load-config": "^5.0.2",
+        "prettier": "^3.1.1",
+        "prettier-plugin-svelte": "^3.1.2",
+        "prettier-plugin-tailwindcss": "^0.5.9",
+        "svelte": "^4.0.0",
+        "svelte-check": "^3.6.0",
+        "tailwindcss": "^3.3.6",
+        "typescript": "^5.0.0",
+        "vite": "^5.0.3",
+        "vitest": "^1.2.0"
+    },
+    "type": "module",
+    "dependencies": {
+        "bits-ui": "^0.21.4",
+        "clsx": "^2.1.1",
+        "svelte-radix": "^1.1.0",
+        "tailwind-merge": "^2.3.0",
+        "tailwind-variants": "^0.2.1"
+    }
 }
