--- a/sig_lib/Cargo.toml
+++ b/sig_lib/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 
 [dependencies]
 cxx = { version = "1.0.119", features = ["c++20"] }
+dotenv = "0.15.0"
+dotenv_codegen = "0.15.0"
 reqwest = { version = "0.12.3", features = ["json", "multipart", "blocking"] }
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
