--- a/sig_lib/Cargo.toml
+++ b/sig_lib/Cargo.toml
@@ -7,14 +7,13 @@ edition = "2021"
 
 [dependencies]
 cxx = { version = "1.0.119", features = ["c++20"] }
-dotenv = "0.15.0"
-dotenv_codegen = "0.15.0"
 reqwest = { version = "0.12.3", features = ["json", "multipart", "blocking"] }
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
 sha2 = "0.10.8"
 tar = "0.4.40"
 tokio = { version = "1.37.0", features = ["full"] }
+web3 = "0.19.0"
 
 [build-dependencies]
 cxx-build = "1.0.119"
