--- a/sig_lib/Cargo.toml
+++ b/sig_lib/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 cxx = { version = "1.0.119", features = ["c++20"] }
+ethabi = "18.0.0"
 futures = "0.3.30"
 reqwest = { version = "0.12.3", features = ["json", "multipart", "blocking"] }
 serde = { version = "1.0.197", features = ["derive"] }
