--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "svelte": "^4.0.0",
     "svelte-check": "^3.6.0",
     "tailwindcss": "^3.3.6",
-    "typescript": "^5.0.0",
     "vite": "^5.0.3",
     "vitest": "^1.2.0"
   },
@@ -42,6 +41,7 @@
     "@tauri-apps/api": "^1.5.4",
     "bits-ui": "^0.21.5",
     "clsx": "^2.1.1",
+    "flowbite-svelte": "^0.46.1",
     "svelte-radix": "^1.1.0",
     "tailwind-merge": "^2.3.0",
     "tailwind-variants": "^0.2.1"
