--- a/sig_lib/Cargo.toml
+++ b/sig_lib/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+copy_dir = "0.1.3"
 cxx = { version = "1.0.119", features = ["c++20"] }
 ethabi = "18.0.0"
 futures = "0.3.30"
